[gd_scene load_steps=2 format=3 uid="uid://becpyddty7o23"]

[ext_resource type="Script" path="res://source/levels/PauseMenu.gd" id="1_mt21t"]

[node name="PauseMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_mt21t")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
scale = Vector2(32, 18)
color = Color(1, 1, 1, 0.286275)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
offset_right = 1280.0
offset_bottom = 720.0

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="ResumeB" type="Button" parent="MarginContainer/CenterContainer/VBoxContainer"]
process_mode = 2
layout_mode = 2
text = "Resume"

[node name="MenuB" type="Button" parent="MarginContainer/CenterContainer/VBoxContainer"]
process_mode = 2
layout_mode = 2
text = "Main Menu"

[node name="OptionsB" type="Button" parent="MarginContainer/CenterContainer/VBoxContainer"]
process_mode = 2
visible = false
layout_mode = 2
text = "Options"

[node name="blank" type="Label" parent="MarginContainer/CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="Goal" type="Label" parent="MarginContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Test text"
horizontal_alignment = 1

[node name="ColorRect" type="ColorRect" parent="MarginContainer/CenterContainer/VBoxContainer/Goal"]
show_behind_parent = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -204.0
offset_top = -19.0
offset_right = 204.0
offset_bottom = 19.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.258824, 0.258824, 0.258824, 0.568627)

[connection signal="pressed" from="MarginContainer/CenterContainer/VBoxContainer/ResumeB" to="." method="_on_resume_b_pressed"]
[connection signal="pressed" from="MarginContainer/CenterContainer/VBoxContainer/MenuB" to="." method="_on_menu_b_pressed"]
